--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
             --input-bg: rgba(15, 23, 42, 0.6);
         }
 
+        @font-face {
+            font-family: 'Arad';
+            src: url('./fonts/AradFD-SemiBold.ttf') format('truetype');
+            font-weight: bold;
+        }
+
+        @font-face {
+            font-family: 'Arad';
+            src: url('./fonts/AradFD-SemiBold.ttf') format('truetype');
+            font-weight: normal;
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -51,7 +63,7 @@
         }
 
         body {
-            font-family: system-ui, -apple-system, sans-serif;
+            font-family: 'Arad', system-ui, -apple-system, sans-serif;
             background-color: var(--bg-body);
             background-image: radial-gradient(circle at 50% 0%, var(--primary), transparent 25%);
             background-attachment: fixed;
@@ -230,7 +242,7 @@
         }
 
         textarea {
-            min-height: 200px;
+            min-height: 120px;
             resize: vertical;
         }
 
@@ -322,16 +334,6 @@
         .alert-success {
             border-right: 5px solid var(--success);
         }
-
-        .icon {
-            width: 20px;
-            height: 20px;
-            fill: none;
-            stroke: currentColor;
-            stroke-width: 2;
-            stroke-linecap: round;
-            stroke-linejoin: round;
-        }
     </style>
 </head>
 
@@ -353,15 +355,9 @@
                     title="نارنجی"></div>
             </div>
             <div class="mode-toggle">
-                <button class="mode-btn" onclick="setMode('light')" id="modeLight">
-                    لایت
-                </button>
-                <button class="mode-btn" onclick="setMode('dark')" id="modeDark">
-                    دارک
-                </button>
-                <button class="mode-btn active" onclick="setMode('auto')" id="modeAuto">
-                    خودکار
-                </button>
+                <button class="mode-btn" onclick="setMode('light')" id="modeLight">لایت</button>
+                <button class="mode-btn" onclick="setMode('dark')" id="modeDark">دارک</button>
+                <button class="mode-btn active" onclick="setMode('auto')" id="modeAuto">خودکار</button>
             </div>
         </div>
 
@@ -371,24 +367,38 @@
 
         <div id="alertContainer"></div>
 
+        <!-- Step 1: Number of Configs -->
         <div class="step-container active" id="step1">
             <div class="step-header">
                 <div class="step-number">۱</div>
-                <div class="step-title">ورود متن یا کانفیگ</div>
+                <div class="step-title">تعداد کانفیگ‌ها</div>
             </div>
             <div class="input-group">
-                <textarea id="inputText" placeholder="کانفیگ‌ها یا متن خود را اینجا وارد کنید (هر کانفیگ در یک خط)..."></textarea>
+                <label style="display: block; margin-bottom: 0.5rem;">تعداد متن یا کانفیگ را وارد کنید:</label>
+                <input type="number" id="configCount" min="1" max="50" value="1">
             </div>
             <div class="button-group">
-                <button class="btn btn-primary" onclick="goToStep(2)" id="step1Btn">
-                    مرحله بعد
-                </button>
+                <button class="btn btn-primary" onclick="prepareInputs()">مرحله بعد</button>
             </div>
         </div>
 
+        <!-- Step 2: Dynamic Inputs -->
         <div class="step-container" id="step2">
             <div class="step-header">
                 <div class="step-number">۲</div>
+                <div class="step-title">ورود متن یا کانفیگ</div>
+            </div>
+            <div id="dynamicInputsContainer"></div>
+            <div class="button-group">
+                <button class="btn btn-danger" onclick="goBack()">قبلی</button>
+                <button class="btn btn-primary" onclick="goToStep(3)">مرحله بعد</button>
+            </div>
+        </div>
+
+        <!-- Step 3: Download Settings -->
+        <div class="step-container" id="step3">
+            <div class="step-header">
+                <div class="step-number">۳</div>
                 <div class="step-title">تنظیمات دانلود</div>
             </div>
             <div class="input-group">
@@ -409,9 +419,7 @@
             </div>
             <div class="button-group">
                 <button class="btn btn-danger" onclick="goBack()">قبلی</button>
-                <button class="btn btn-primary" onclick="processAndDownload()">
-                    تبدیل و دانلود
-                </button>
+                <button class="btn btn-primary" onclick="processAndDownload()">تبدیل و دانلود</button>
             </div>
         </div>
 
@@ -422,15 +430,14 @@
             </div>
             <p style="text-align: center; margin-bottom: 1.5rem;">فایل شما آماده شد و دانلود شروع شد.</p>
             <div style="display: flex; gap: 1rem;">
-                <button class="btn btn-primary" onclick="location.reload()">
-                    شروع دوباره
-                </button>
+                <button class="btn btn-primary" onclick="location.reload()">شروع دوباره</button>
             </div>
         </div>
     </div>
 
     <script>
         let currentStep = 1;
+        let configCount = 1;
 
         function setPrimaryColor(colorName) {
             const colors = {
@@ -468,10 +475,35 @@
             document.getElementById('passwordGroup').style.display = format === 'zip-pass' ? 'block' : 'none';
         }
 
-        function goToStep(step) {
-            if (step === 2 && !document.getElementById('inputText').value.trim()) {
-                showAlert('لطفا ابتدا متن یا کانفیگ را وارد کنید', 'danger');
+        function prepareInputs() {
+            configCount = parseInt(document.getElementById('configCount').value);
+            if (isNaN(configCount) || configCount < 1) {
+                showAlert('لطفا تعداد معتبر وارد کنید', 'danger');
                 return;
+            }
+            const container = document.getElementById('dynamicInputsContainer');
+            container.innerHTML = '';
+            for (let i = 1; i <= configCount; i++) {
+                const div = document.createElement('div');
+                div.className = 'input-group';
+                div.innerHTML = `
+                    <label style="display: block; margin-bottom: 0.5rem; color: var(--primary);">کانفیگ/متن ${i}:</label>
+                    <textarea class="config-input" placeholder="متن مربوط به بخش ${i} را وارد کنید..."></textarea>
+                `;
+                container.appendChild(div);
+            }
+            goToStep(2);
+        }
+
+        function goToStep(step) {
+            if (step === 3) {
+                const inputs = document.querySelectorAll('.config-input');
+                let hasValue = false;
+                inputs.forEach(inp => { if (inp.value.trim()) hasValue = true; });
+                if (!hasValue) {
+                    showAlert('لطفا حداقل یک کانفیگ وارد کنید', 'danger');
+                    return;
+                }
             }
             document.getElementById(`step${currentStep}`).classList.remove('active');
             document.getElementById(`step${currentStep}`).style.display = 'none';
@@ -491,22 +523,28 @@
         }
 
         async function processAndDownload() {
-            const text = document.getElementById('inputText').value.trim();
+            const inputs = document.querySelectorAll('.config-input');
+            const allTexts = [];
+            inputs.forEach(inp => {
+                if (inp.value.trim()) allTexts.push(inp.value.trim());
+            });
+
+            if (allTexts.length === 0) return;
+
+            const combinedText = allTexts.join('\n');
             const fileName = document.getElementById('fileName').value.trim() || 'configs';
             const format = document.getElementById('downloadFormat').value;
             const password = document.getElementById('zipPassword').value;
 
-            if (!text) return;
-
-            // Convert to Base64
-            // Using btoa(unescape(encodeURIComponent(str))) for UTF-8 support
-            const base64Data = btoa(unescape(encodeURIComponent(text)));
+            // Convert to Base64 (UTF-8 safe)
+            const base64Data = btoa(unescape(encodeURIComponent(combinedText)));
             const uint8Data = new TextEncoder().encode(base64Data);
 
             try {
                 if (format === 'txt') {
                     downloadFile(base64Data, `${fileName}.txt`, 'text/plain');
                 } else if (format === 'zip') {
+                    // Normal ZIP
                     const zipped = fflate.zipSync({
                         [`${fileName}.txt`]: uint8Data
                     });
@@ -516,14 +554,15 @@
                         showAlert('لطفا پسورد را وارد کنید', 'danger');
                         return;
                     }
-                    // Note: fflate supports ZipCrypto for passwords
+                    // Password ZIP using fflate.zipSync with ZipCrypto
+                    // Structure: { [filename]: [Uint8Array, options] }
                     const zipped = fflate.zipSync({
                         [`${fileName}.txt`]: [uint8Data, { password: password }]
                     });
                     downloadBlob(new Blob([zipped]), `${fileName}.zip`);
                 }
 
-                document.getElementById('step2').style.display = 'none';
+                document.getElementById('step3').style.display = 'none';
                 document.getElementById('outputSection').classList.add('show');
                 showAlert('فایل با موفقیت ایجاد شد', 'success');
             } catch (err) {
@@ -549,7 +588,6 @@
             URL.revokeObjectURL(a.href);
         }
 
-        // Initialize theme
         window.onload = () => {
             const savedColor = localStorage.getItem('base64-primary-color') || 'blue';
             setPrimaryColor(savedColor);
@@ -559,4 +597,3 @@
 </body>
 
 </html>
-
