--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مبدل کانفیگ به Base64</title>
-    <!-- Importing fflate for ZIP support -->
-    <script src="https://unpkg.com/fflate"></script>
+    <!-- Importing fflate for ZIP support - using specific version for stability -->
+    <script src="https://cdn.jsdelivr.net/npm/fflate@0.8.2/lib/browser.min.js"></script>
     <style>
         :root {
             --primary-blue: #3b82f6;
@@ -545,30 +545,41 @@
                     downloadFile(base64Data, `${fileName}.txt`, 'text/plain');
                 } else if (format === 'zip') {
                     // Normal ZIP
-                    const zipped = fflate.zipSync({
+                    fflate.zip({
                         [`${fileName}.txt`]: uint8Data
+                    }, (err, zipped) => {
+                        if (err) throw err;
+                        downloadBlob(new Blob([zipped]), `${fileName}.zip`);
+                        showSuccess();
                     });
-                    downloadBlob(new Blob([zipped]), `${fileName}.zip`);
                 } else if (format === 'zip-pass') {
                     if (!password) {
                         showAlert('لطفا پسورد را وارد کنید', 'danger');
                         return;
                     }
-                    // Password ZIP using fflate.zipSync with ZipCrypto
-                    // Structure: { [filename]: [Uint8Array, options] }
-                    const zipped = fflate.zipSync({
-                        [`${fileName}.txt`]: [uint8Data, { password: password }]
+                    // Password ZIP using fflate.zip with ZipCrypto
+                    // We must use specific options to ensure password is applied correctly
+                    fflate.zip({
+                        [`${fileName}.txt`]: [uint8Data, { password: password, level: 6 }]
+                    }, (err, zipped) => {
+                        if (err) {
+                            showAlert('خطا در رمزگذاری: ' + err.message, 'danger');
+                            return;
+                        }
+                        downloadBlob(new Blob([zipped]), `${fileName}.zip`);
+                        showSuccess();
                     });
-                    downloadBlob(new Blob([zipped]), `${fileName}.zip`);
                 }
-
-                document.getElementById('step3').style.display = 'none';
-                document.getElementById('outputSection').classList.add('show');
-                showAlert('فایل با موفقیت ایجاد شد', 'success');
             } catch (err) {
                 console.error(err);
                 showAlert('خطا در ایجاد فایل: ' + err.message, 'danger');
             }
+        }
+
+        function showSuccess() {
+            document.getElementById('step3').style.display = 'none';
+            document.getElementById('outputSection').classList.add('show');
+            showAlert('فایل با موفقیت ایجاد شد', 'success');
         }
 
         function downloadFile(content, fileName, contentType) {
