--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مبدل کانفیگ به Base64</title>
-    <!-- Importing fflate for ZIP support - using full bundle for maximum compatibility -->
-    <script src="https://cdn.jsdelivr.net/npm/fflate@0.8.2/lib/index.min.js"></script>
+    <!-- Importing fflate for ZIP support -->
+    <script src="https://unpkg.com/fflate"></script>
     <style>
         :root {
             --primary-blue: #3b82f6;
